--- a/src/questions/data_types.yaml
+++ b/src/questions/data_types.yaml
@@ -1,25 +1,37 @@
-- uuid: 1b8fbe3c-aeb2-4b7d-a3ef-3082bf07efcc
+- # uuid Needs to be a random UUID - You can generate it from https://www.uuidgenerator.net/version4.  Use version 4
+  uuid: 1b8fbe3c-aeb2-4b7d-a3ef-3082bf07efcc
+  # Types can be MultipleChoice or SingleChoice
   type: MultipleChoice
-  order: 0
-  content: What does SW DAO offer? (Select One)
+  # Content should be in Markdown format
+  content: What does SW DAO offer?
+  hint: This is shown if user needs some help
+  explanation: This is shown when the user answers the choice incorrectly
   answerKeys:
-    - dog_or_cat
+    - e0kl
+  # should be from one of the predefined list of topics
+  topic: "01_data_types"
+  # should be from one of the predefined list of sub-topics, or can be a new one
+  sub_topics:
+    - "string"
+    - "variables"
+  # Difficulty level should be one option from "Low" , "Medium", "High"
+  difficulty_level: "Low"
   choices:
+    # Content should be in Markdown format
     - content: It offers crypto based mining applications for effective utilization
         of resources.
-      key: dog_and_cat
+      # four character random string
+      key: rtte
+      # order in which the choice should appear
       order: 0
     - content: It offers strategic DeFi investment products which allocate capital
         based on Machine Learning
-      key: dog_or_cat
+      key: e0kl
       order: 1
     - content: It offers coding and machine learning solutions to develop Defi
         applications.
-      key: only_dog
+      key: fklo
       order: 2
     - content: All of the about options
-      key: only_cat
+      key: pwlp
       order: 3
-
-
-
