--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,5 +1,5 @@
-title: Dummy Course
-summary: This is a Solidity Course
+title: DeFi Course
+summary: This is a DeFi Course
 description:  |
   "Line1" 
   "Line2" 
