--- a/src/questions/blockchain_basics.yaml
+++ b/src/questions/blockchain_basics.yaml
@@ -1,5 +1,5 @@
 - # uuid Needs to be a random UUID - You can generate it from https://www.uuidgenerator.net/version4.  Use version 4
-  uuid: 85221e94-89a6-45f0-a5e4-c43de3ea2e35
+  uuid: 1b8fbe3c-aeb2-4b7d-a3ef-3082bf07efcc
   # Types can be MultipleChoice or SingleChoice
   type: MultipleChoice
   # Content should be in Markdown format
@@ -7,13 +7,11 @@
   hint: This is shown if user needs some help
   explanation: This is shown when the user answers the choice incorrectly
   answerKeys:
-    - A
+    - e0kl
   # should be from one of the predefined list of topics
-  topic: "01_data_types"
-  # should be from one of the predefined list of sub-topics, or can be a new one
   sub_topics:
-    - "string"
-    - "variables"
+    - "consensus-layer"
+    - "cryptographic-primitives"
   # Difficulty level should be one option from "Low" , "Medium", "High"
   difficulty_level: "Low"
   choices:
@@ -21,17 +19,17 @@
     - content: It offers crypto based mining applications for effective utilization
         of resources.
       # four character random string
-      key: A
+      key: rtte
       # order in which the choice should appear
       order: 0
     - content: It offers strategic DeFi investment products which allocate capital
         based on Machine Learning
-      key: B
+      key: e0kl
       order: 1
     - content: It offers coding and machine learning solutions to develop Defi
         applications.
-      key: C
+      key: fklo
       order: 2
     - content: All of the about options
-      key: D
+      key: pwlp
       order: 3
