Add generated files

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,5 +1,5 @@
-title: Dummy Course
-summary: This is a Dummy Course that is used for validation
+title: DeFi 101 Course
+summary: This is a DeFi 101 Course
 description:  | 
   "Line1" 
   "Line2" 
