--- a/src/questions/cfi_vs_defi.yaml
+++ b/src/questions/cfi_vs_defi.yaml
@@ -9,10 +9,9 @@
   answerKeys:
     - e0kl
   # should be from one of the predefined list of topics
-  topic: "01_data_types"
   # should be from one of the predefined list of sub-topics, or can be a new one
   subTopics:
-    - "consensus-layer"
+    - "hashing"
   # Difficulty level should be one option from "Low" , "Medium", "High"
   difficultyLevel: "Low"
   choices:
