--- a/src/summaries/cfi_vs_defi.yaml
+++ b/src/summaries/cfi_vs_defi.yaml
@@ -2,8 +2,7 @@
   key: traditional-finance
   details: |
     - Banks provide services like securities/insurance/trust investment/fund management 
-    - Hold custodies of customers’ funds/assets
-      * Can freeze accounts
+    - Hold custodies of customers funds/assets
     - Serves as intermediaries for transactions
 - title: Birth of (Public) Blockchain
   key: public-blockchain-birth  
