--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,4 +1,5 @@
 title: DeFi 101 Course
+key: defi-course
 summary: This is a DeFi 101 Course
 description:  | 
   "Decentralised Finance (DeFi) is the upcoming revolution in the world which would result in the complete transformation in the functioning of the finance sector using blockchain technology as its core." 
