--- a/src/summaries/cfi_vs_defi.yaml
+++ b/src/summaries/cfi_vs_defi.yaml
@@ -1,10 +1,12 @@
 - title: Traditional Finance (CeFi)
+  shortTitle: Trad Fi(CeFI)
   key: traditional-finance
   details: |
     - Banks provide services like securities/insurance/trust investment/fund management 
     - Hold custodies of customers funds/assets
     - Serves as intermediaries for transactions
 - title: Birth of (Public) Blockchain
+  shortTitle: Blockchain Birth
   key: public-blockchain-birth  
   details: |
     - Bitcoin white paper was published in ....
