--- a/src/readings/blockchain_basics.yaml
+++ b/src/readings/blockchain_basics.yaml
@@ -1,5 +1,6 @@
 - uuid: 020f238c-96f2-4613-aca1-4ebba06395c5
   title: Introduction to Blockchain Technology
+  shortTitle: Intro to Blockchain
   type: YoutubeVideo
   url: https://www.youtube.com/watch?v=2yJqjTiwpxM
   subTopics:
@@ -12,6 +13,7 @@
 
 - uuid: 0c7eaedf-b949-4da3-bdc5-fb21f3633311
   title: Working of Blockchain Technology
+  shortTitle: Blockchain Working
   type: YoutubeVideo
   url: https://www.youtube.com/watch?v=bBC-nXj3Ng4
   subTopics:
@@ -23,6 +25,7 @@
 
 - uuid: e5747299-9764-4598-ac7b-ca3933bc96ba
   title: Types of Blockchain Networks
+  shortTitle: Blockchain Networks
   type: WebArticle
   url: https://www.techtarget.com/searchcio/feature/What-are-the-4-different-types-of-blockchain-technology
   subTopics:
@@ -34,6 +37,7 @@
 
 - uuid: 0f2ca5cf-12f4-42a7-8c7b-d42212964991
   title: Cryptographic Hashing
+  shortTitle: Hashing
   type: YoutubeVideo
   url: https://www.youtube.com/watch?v=gTfNtop9vzM
   subTopics:
