--- a/src/readings/cfi_vs_defi.yaml
+++ b/src/readings/cfi_vs_defi.yaml
@@ -1,5 +1,6 @@
 - uuid: 468d0fa9-063b-466f-b2be-8135958e0f2a
   title: What is DeFi
+  shortTitle: Hashing
   type: YoutubeVideo
   url: https://www.youtube.com/watch?v=aQHcvrPe1GQ
   subTopics:
