introduction_to_defi_summaries_updated_1

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -17,7 +17,7 @@ topics:
         * CeFi vs DeFi
         * Use cases of DeFi
     readings: blockchain_basics.yaml
-    summaries: blockchain_basics.yaml
+    summaries: introduction_to_defi.yaml
     questions: blockchain_basics.yaml
     status: In Progress
     completionWeek:  July 18
