--- a/src/summaries/introduction_to_defi.yaml
+++ b/src/summaries/introduction_to_defi.yaml
@@ -1,5 +1,5 @@
 - title: Introduction to Decentralised Finance
-  shortTitle: Decentralised Finance Introduction
+  shortTitle: DeFi Intro
   key: introduction-to-decentralised-finance
   details: |
     - DeFi Origin
