update thumbnail images

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -9,7 +9,7 @@ highlights:
   - All DeFi building blocks
   - Summaries and questions for each chapter
 publishStatus: Live
-thumbnail: ipfs://Qmep98TUiat2nGs2TTRiMPiBtKxYPrVaFYkrJGqPDwkF7p
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/courses/DoDAO/DeFi/defi_logo.jpeg
 details:  | 
   Decentralised Finance (DeFi) is the upcoming revolution in the world which would result in the complete transformation in the functioning of the finance sector using blockchain technology as its core.  
   This course, DeFi 101, will introduce the learners to the world of blockchain and how it can be incorporated into the current financial system making it more efficient and secure than before. 
