--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,10 +1,10 @@
 title: DeFi 101 Course
 key: defi-course
 summary: |
-  Decentralised Finance (DeFi) is the upcoming revolution in the world which would result in the complete transformation in the functioning of the finance sector using blockchain technology as its core.  
-  This course, DeFi 101, will introduce the learners to the world of blockchain and how it can be incorporated into the current financial system making it more efficient and secure than before
+  Decentralised Finance (DeFi) is the upcoming revolution in the world which would result in the complete transformation in the functioning of the finance sector using blockchain technology as its core.
 highlights:
-  - Intro to DeFi
+  - Intro to Decentralized Finance
+  - DeFi vs CeFi
   - Blockchain history and basics
   - All DeFi building blocks
   - Summaries and questions for each chapter
