introduction_to_defi updated 2

--- a/src/summaries/introduction_to_defi.yaml
+++ b/src/summaries/introduction_to_defi.yaml
@@ -35,7 +35,7 @@
       * 5-7% is charged for a wire transfer
       * It takes 2 days to settle a stock transaction
       * Fund transfer is slow
-      * Banks are prone to fauds, chargebanks and lack security as well.
+      * Banks are prone to frauds, chargebanks and lack security as well.
       * Banks do not allow micro-transitions.
       * It is difficult to get paid using banks.
     
@@ -69,7 +69,7 @@
   details: |
     Centralised Finance opens up a wide range of advancement in the current centralised system.
 
-    - Transfer for Money 
+    - Transfer of Money 
       * Using DeFi sending money would be as easy as sending an email.
       * You just need to enter other persons account address and your payment will directly go into their account.
 
@@ -93,8 +93,7 @@
       * If the borrower is not able to pay the loan, the transaction is reversed as if it never occured.
 
     - Tokenization
-      * DeFi intriduces the concepts of crypto tokens.
+      * DeFi introduces the concepts of crypto tokens.
       * Ethereum enables robust smart contract capabilities, thereby opening up the roads for issuing crypto tokens. 
       * Crypto tokens basically worked as digital assets present on a blockchain alongside having different features and uses.
-      
       
