--- a/src/course.yaml
+++ b/src/course.yaml
@@ -18,7 +18,7 @@ topics:
         * Use cases of DeFi
     readings: blockchain_basics.yaml
     summaries: introduction_to_defi.yaml
-    questions: blockchain_basics.yaml
+    questions: introduction_to_defi.yaml
     status: In Progress
     completionWeek:  July 18
   - title: Blockchain Basics
